[package]
name = "lib_vminfo"
description = "A library designed to idiomatically pull instance data and metadata from Azure for Virtual Machines using the Azure Resource Graph API"
homepage = "https://www.statcan.gc.ca"
repository = "https://github.com/SystemFiles/azure-vminfo/"
readme = "./README.md"
license = "MIT"
version = "1.1.2"
authors = ["Ben Sykes <ben.sykes@statcan.gc.ca"]
edition = "2021"
keywords = ["vm", "metadata", "instancedata", "azure", "library"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
reqwest = {version = "0.11", features = ["blocking", "json"]}
oauth2 = { version = "4.0", features = ["reqwest"] }
users = { version = "0.11" }
redis = { version = "0.22", features = ["tls", "json"] }